tests/baselines/reference/octalLiteralAndEscapeSequence(target=es5).errors.txt
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(3,1): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(4,1): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(5,1): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(6,1): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(7,1): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(8,5): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(9,5): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(10,5): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(11,5): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(12,5): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(13,4): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(14,4): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(15,4): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(16,4): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(17,4): error TS1121: Octal literals are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(20,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(21,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(22,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(23,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(24,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(25,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(26,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(28,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(29,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(30,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(31,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(32,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(33,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(34,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(36,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(37,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(38,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(39,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(40,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(41,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(42,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(43,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(44,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(45,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(46,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(47,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(48,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(49,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(50,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(51,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(52,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(53,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(54,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(55,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(56,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(57,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(58,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(59,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(60,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(61,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(62,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(63,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(64,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(65,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(66,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(67,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(68,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(69,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(70,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(71,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(72,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(73,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(74,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(75,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(76,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(77,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(78,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(79,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(80,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(81,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(82,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(83,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(84,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(85,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(86,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(87,2): error TS1484: Octal escape sequences are not allowed in strict mode.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(90,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(91,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(92,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(93,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(94,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(95,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(96,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(98,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(99,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(100,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(101,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(102,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(103,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(104,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(106,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(107,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(108,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(109,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(110,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(111,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(112,2): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(114,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(115,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(116,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(117,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(118,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(119,6): error TS1485: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/octalLiteralAndEscapeSequence.ts(120,6): error TS1485: Octal escape sequences are not allowed in template strings.


==== tests/cases/compiler/octalLiteralAndEscapeSequence.ts (109 errors) ====
    "use strict";
    
    00;
    ~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    05;
    ~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    000;
    ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    005;
    ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    055;
    ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `0${00}`;
        ~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `0${05}`;
        ~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `0${000}`;
        ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `0${005}`;
        ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `0${055}`;
        ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `${00}0`;
       ~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `${05}0`;
       ~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `${000}0`;
       ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `${005}0`;
       ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    `${055}0`;
       ~~~
!!! error TS1121: Octal literals are not allowed in strict mode.
    
    "\0";
    "\5";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\00";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\05";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\55";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\000";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\005";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\055";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\0';
    '\5';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\00';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\05';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\55';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\000';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\005';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\055';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    
    "\1";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\01";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\001";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\17";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\017";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\0017";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\177";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\18";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\018";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\0018";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\4";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\47";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\047";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\0047";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\477";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\48";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\048";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\0048";
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\8";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\87";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\087";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\0087";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\877";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\88";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\088";
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    "\0088";
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\1';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\01';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\001';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\17';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\017';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\0017';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\177';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\18';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\018';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\0018';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\4';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\47';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\047';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\0047';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\477';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\48';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\048';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\0048';
     ~~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\8';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\87';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\087';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\0087';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\877';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\88';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\088';
     ~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    '\0088';
     ~~~
!!! error TS1484: Octal escape sequences are not allowed in strict mode.
    
    `\0`;
    `\5`;
     ~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\00`;
     ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\05`;
     ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\55`;
     ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\000`;
     ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\005`;
     ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\055`;
     ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\0`;
    `${0}\5`;
         ~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\00`;
         ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\05`;
         ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\55`;
         ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\000`;
         ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\005`;
         ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\055`;
         ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\0${0}`;
    `\5${0}`;
     ~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\00${0}`;
     ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\05${0}`;
     ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\55${0}`;
     ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\000${0}`;
     ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\005${0}`;
     ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `\055${0}`;
     ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\0${0}`;
    `${0}\5${0}`;
         ~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\00${0}`;
         ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\05${0}`;
         ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\55${0}`;
         ~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\000${0}`;
         ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\005${0}`;
         ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    `${0}\055${0}`;
         ~~~~
!!! error TS1485: Octal escape sequences are not allowed in template strings.
    